# mtg-vectors

./: .cz.yaml  .gitignore  CHANGELOG.md  MISSING.md  README.md  commands.txt  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  scripts.py  set.json  svgo.config.js  utils.py
.github/workflows/: build-all.yml  build-release.yml  optimize-svg.yml  optimize-svgs.yml
data/: alias.set.yml  corrected.set.yml  empty.set.yml  ignored.set.yml  manifest.set.json  missing.set.yml  mixed.set.yml  routes.set.yml
data/set/: alias.yml  corrected.yml  empty.yml  ignored.yml  missing.yml  mixed.yml  rarities.yml  routes.yml
data/watermark/: ignored.yml  mixed.yml
docs/: MISSING.md
hooks/: commitizen.py
src/: cli.py  constants.py  icons.py  schema.py  symbols_set.py  symbols_wm.py  types.py  utils.py  watermarks.py
src/_cli/: __init__.py  build.py  test.py
src/commands/: __init__.py  build.py  test.py
svgo/: default.mini.js  default.readable.js
