[tool.poetry]
name = "mtg-vectors"
version = "0.7.4"
description = "A repository of Magic the Gathering SVG (vector) files for set, watermark, and miscellaneous symbols."
authors = ["Investigamer <freethoughtleft@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = 'src'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
yarl = "^1.9.3"
pyyaml = "^6.0.1"
commitizen = "^3.12.0"
typing-extensions = "^4.8.0"
setuptools = "^70.0.0"
click = "^8.1.7"
omnitils = {git = "https://github.com/Investigamer/omnitils.git", tag = "1.2.2"}
hexproof = {git = "https://github.com/Investigamer/hexproof.git", tag = "0.3.0"}

[tool.poetry.scripts]
vectors = 'src.commands:AppCLI'

[tool.commitizen]
version = "0.7.4"
changelog_start_rev = "0.2.1"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
